-----------------------------
 Change history for MATPOWER
-----------------------------

Version:    6.0b1

maintained by Ray Zimmerman <rz10@cornell.edu>

MATPOWER
Copyright (c) 1996-2016 by Power System Engineering Research Center (PSERC)
See http://www.pserc.cornell.edu/matpower/ for more info.

For change history for MOST, see most/docs/CHANGES.

Changes since 6.0b1
-----------------

9/19/16
    - Fix dimension bug in makeBdc() when last bus is not connected (should
      never happen if bus is properly marked as type NONE).

8/15/16
    - Fix a harmless bug in @opt_model where variable, constraint and
      cost sets indexed by a single variable would allocate a square
      matrix of starting and ending indices, rather than a simple vector.
      Thanks to Alberto Lamadrid for catching this.

7/18/16
    - Extract computation of tangent vector from cpf_predictor() into
      cpf_tangent(), and call sequentially as needed.

7/11/16
    - Add step size to CPF callback args and results logging.
    - Add option 'cpf.adapt_step_damping' to control oscillations in
      adaptive step size control for continuation power flow.

7/8/16
    - Updated network reduction code to handle cases with radially connected
      external buses.

7/1/16
    - Fix bug in cpf_default_callback() that sometimes resulted in plotting
      voltage at different buses for different parts of the curve when the
      bus was not explicitly specified with the 'cpf.plot.bus' option.

6/23/16
    - Bad bus numbers no longer cause a fatal error (after reporting the
      bad bus numbers) in case_info().
    - Updated versions of qcqp_opf() and qcqp_opf() in extras/misc, from
      Cedric Josz.

6/10/16
    - Fix bug in savecase() where single quotes were not escaped properly
      in bus names.
    - Generator capability curve parameters that define a zero-reactive
      power line no longer cause a fatal error.


Changes since 5.1
-----------------

6/1/16
    - Released 6.0b1.

5/27/16